--- a/estate_project/templates/header.html
+++ b/estate_project/templates/header.html
@@ -1049,7 +1049,7 @@
                                 </li>
                                 <li id="menu-item-1032"
                                     class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1032"><a
-                                        href="/schedule-inspection">Book us</a></li>
+                                        href="/schedule-inspection">Schedule an inspection</a></li>
                                 <li id="menu-item-1679"
                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1679"><a
                                         href="/downloads">Downloads</a></li>
@@ -1058,7 +1058,7 @@
                                         href="/contact-us">Contact Us</a></li>
                                 <li id="menu-item-1033"
                                     class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1033"><a
-                                        href="/login">Login</a></li>
+                                        href="/admin">Login</a></li>
                             </ul>
                         </div>
                         <!-- SITE SEARCH -->
