--- a/estate_project/templates/footer.html
+++ b/estate_project/templates/footer.html
@@ -80,23 +80,23 @@
                 </div>
                 <div id="nav_menu-2" class="col-lg-3 col-md-6 col-sm-12 widget_nav_menu inteshape-widget">
                     <div class="widget footer-widget">
-                        <h5 class="widget-title" style="color: white; ">Useful links</h5>
+                        <h5 class="widget-title" style="color: black; ">Useful links</h5>
                         <div class="menu-useful-links-container">
                             <ul id="menu-useful-links" class="menu">
                                 <li id="menu-item-1040" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1040">
-                                    <a href="about-us/index.html" style="color: white; ">About Us</a>
+                                    <a href="/about-us" style="color: white; ">About Us</a>
                                 </li>
                                 <li id="menu-item-1041" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1041">
-                                    <a href="blog-grid-style/index.html" style="color: white; ">Blog</a>
+                                    <a href="#" style="color: white; ">Blog</a>
                                 </li>
                                 <li id="menu-item-1042" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1042">
-                                    <a href="grid-4-columns/index.html" style="color: white; ">Projects</a>
+                                    <a href="/our-projects" style="color: white; ">Projects</a>
                                 </li>
                                 <li id="menu-item-1043" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1043">
-                                    <a href="contact-us/index.html" style="color: white; ">Support Center</a>
+                                    <a href="/contact-us" style="color: white; ">Support Center</a>
                                 </li>
                                 <li id="menu-item-1044" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1044">
-                                    <a href="http://dash.acerealestates.ng/login" style="color: white; ">Become an Zaran Agent</a>
+                                    <a href="/contact-us" style="color: white; ">Become an Zaran Agent</a>
                                 </li>
                             </ul>
                         </div>
@@ -110,7 +110,7 @@
                             <ul class="widget_address">
                                 <li>Lorem ipsum address
                                 </li>
-                                <li> Hello@acerealestates.ng</li>
+                                <li> Hello@zaranrealestates.ng</li>
                                 <li>2345678910111</li>
                                 <li>2345678910111</li>
                             </ul>
