modified:   estate_project/db.sqlite3 	deleted:    estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/close_bk.png 	deleted:    estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/file-icon.png 	deleted:    estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/lockers/lock_1.html 	deleted:    estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/lockers/lock_3.html 	deleted:    estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/lockers/lock_4.html 	deleted:    estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/lockers/lock_5.html 	deleted:    estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/lockers/lock_6.html 	deleted:    estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/no-avatar.png 	deleted:    estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/top_aff_bk_1.png 	deleted:    estate_project/staticfiles/wp-content/plugins/indeed-affiliate-pro/assets/images/top_aff_bk_4.png 	modified:   estate_project/templates/about-us.html 	modified:   estate_project/templates/blog_post.html 	modified:   estate_project/templates/index.html

--- a/estate_project/templates/about-us.html
+++ b/estate_project/templates/about-us.html
@@ -226,19 +226,15 @@
 												<div class="row">
 													<div class="col-lg-6 col-md-12 col-sm-12">
 														<div class="large-title">
-															<h3 class="m-tb0">We present the idea with impressive
-																details.</h3>
+															<h3 class="m-tb0">Discover Your Dream Home with Zaran Real Estate</h3>
 														</div>
 													</div>
 													<div class="col-lg-6 col-md-12	col-sm-12">
 														<div class="large-title-info">
-															<p>Zaran Real Estate is an award winning and value driven real
-																estate development company with a tripartite value
-																system that cut across service delivery, and customer
-																satisfaction.</p>
-															<div class="text-left">
+															<p>Explore a wide range of exquisite properties tailored to your preferences and find your perfect dream home with Zaran Real Estate</p>
+															{% comment %} <div class="text-left">
 																<a href="#" class="site-button-link.black" style="color: #ED2B2A;">Read More</a>
-															</div>
+															</div> {% endcomment %}
 														</div>
 													</div>
 												</div>
