--- a/estate_project/templates/blog_post.html
+++ b/estate_project/templates/blog_post.html
@@ -14,7 +14,7 @@
                 <!-- BREADCRUMB ROW -->
                 <div>
                     <ul id="breadcrumbs" class="sx-breadcrumb breadcrumb-style-2">
-                        <li class="item-home"><a class="bread-link bread-home" href="https://acerealestates.ng"
+                        <li class="item-home"><a class="bread-link bread-home" href="#"
                                 title="Home">Home</a></li>
                         <li class="item-cat"><a href="https://acerealestates.ng/category/news/">Article</a></li>
                         <li class="item-current item-1709"><span class="bread-current bread-1709"
