--- a/estate_project/templates/index.html
+++ b/estate_project/templates/index.html
@@ -583,12 +583,12 @@
 														<div class="row">
 															<div class="col-lg-6 col-md-12 col-sm-12">
 																<div class="large-title">
-																	<h3 class="m-tb0">Lorem ipsum dolor sit amet.</h3>
+																	<h3 class="m-tb0">Discover Your Dream Home with Zaran Real Estate</h3>
 																</div>
 															</div>
 															<div class="col-lg-6 col-md-12 col-sm-12">
 																<div class="large-title-info">
-																	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit maxime nam eaque consectetur libero temporibus sed hic, nesciunt qui voluptates.</p>
+																	<p>Explore a wide range of exquisite properties tailored to your preferences and find your perfect dream home with Zaran Real Estate</p>
 																	<div class="text-left">
 																		<a href="#" class="site-button-link"></a>
 																	</div>
