modified:   estate_project/templates/index.html 	modified:   estate_project/templates/our-projects.html

--- a/estate_project/templates/index.html
+++ b/estate_project/templates/index.html
@@ -253,7 +253,7 @@
 																world of impeccable architectural
 																designs and luxurious styles </rs-layer><!--
 
-							--><a id="slider-3-slide-8-layer-4" class="rs-layer rev-btn" href="https://acerealestates.ng/about-us/"
+							--><a id="slider-3-slide-8-layer-4" class="rs-layer rev-btn" href="#"
 																target="_blank" rel="noopener" data-type="button"
 																data-color="#000000" data-rsp_ch="on"
 																data-xy="x:l,l,c,c;xo:394px,210px,0,0;yo:441px,454px,375px,438px;"
@@ -326,7 +326,7 @@
 																your imagination to distinctive
 																elegance and possibilities </rs-layer><!--
 
-							--><a id="slider-3-slide-13-layer-4" class="rs-layer rev-btn" href="https://acerealestates.ng/about-us/"
+							--><a id="slider-3-slide-13-layer-4" class="rs-layer rev-btn" href="#"
 																target="_blank" rel="noopener" data-type="button"
 																data-color="#000000" data-rsp_ch="on"
 																data-xy="x:l,l,c,c;xo:394px,210px,0,0;yo:441px,454px,375px,438px;"
@@ -397,7 +397,7 @@
 																style="z-index: 8; font-family: 'Poppins'">We Bring Your
 																Dream to reality. </rs-layer><!--
 
-							--><a id="slider-3-slide-14-layer-4" class="rs-layer rev-btn" href="https://acerealestates.ng/about-us/"
+							--><a id="slider-3-slide-14-layer-4" class="rs-layer rev-btn" href="#"
 																target="_blank" rel="noopener" data-type="button"
 																data-color="#000000" data-rsp_ch="on"
 																data-xy="x:l,l,c,c;xo:394px,210px,0,0;yo:441px,454px,375px,438px;"
@@ -942,16 +942,16 @@
 																				<div class="widget_social_inks pull-right">
 																					<ul class="social-icons social-md social-square social-dark m-b0">
 																						<li>
-																							<a href="http://www.facebook.com/share.php?u=https://acerealestates.ng/alara-of-ilara/" class="fa fa-facebook"></a>
+																							<a href="http://www.facebook.com/share.php?u=" class="fa fa-facebook"></a>
 																						</li>
 																						<li>
-																							<a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://acerealestates.ng/alara-of-ilara/" class="fa fa-linkedin"></a>
+																							<a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=" class="fa fa-linkedin"></a>
 																						</li>
 																						<li>
-																							<a href="http://pinterest.com/pin/create/button/?url=https://acerealestates.ng/alara-of-ilara/" class="fa fa-pinterest"></a>
+																							<a href="http://pinterest.com/pin/create/button/?url=" class="fa fa-pinterest"></a>
 																						</li>
 																						<li>
-																							<a href="http://twitter.com/home?status=https://acerealestates.ng/alara-of-ilara/" class="fa fa-twitter"></a>
+																							<a href="http://twitter.com/home?status=" class="fa fa-twitter"></a>
 																						</li>
 																					</ul>
 																				</div>
