--- a/estate_project/templates/our-projects.html
+++ b/estate_project/templates/our-projects.html
@@ -43,7 +43,7 @@
 								<div
 									class="eael-elements-flip-box-container eael-animate-flip eael-animate-left eael-content">
 
-									<a class="eael-elements-flip-box-flip-card" href="https://acerealestates.ng/land/">
+									<a class="eael-elements-flip-box-flip-card" href="#">
 										<div class="eael-elements-flip-box-front-container">
 
 
@@ -101,7 +101,7 @@
 								<div
 									class="eael-elements-flip-box-container eael-animate-flip eael-animate-left eael-content">
 
-									<a class="eael-elements-flip-box-flip-card" href="https://acerealestates.ng/house/">
+									<a class="eael-elements-flip-box-flip-card" href="#">
 										<div class="eael-elements-flip-box-front-container">
 
 
