--- a/estate_project/templates/footer.html
+++ b/estate_project/templates/footer.html
@@ -2,7 +2,7 @@
 <footer class="site-footer footer-large footer-light footer-wide">
 
     <!-- FOOTER BLOCKES START -->
-    <div class="footer-top" style="background-color: #ED2B2A; color: #fff;">
+    <div class="footer-top"  color: #fff;">
         <div class="container-fluid">
             <div class="row">
                 <div id="recent_posts_entry-2"
