modified:   estate_project/db.sqlite3 	modified:   estate_project/estate_project/__pycache__/settings.cpython-310.pyc 	modified:   estate_project/estate_project/settings.py 	modified:   estate_project/templates/contact-us.html 	modified:   estate_project/templates/schedule-inspection.html

--- a/estate_project/templates/contact-us.html
+++ b/estate_project/templates/contact-us.html
@@ -50,10 +50,8 @@
 														<p role="status" aria-live="polite" aria-atomic="true"></p>
 														<ul></ul>
 													</div>
-													<form
-														action="https://acerealestates.ng/contact-us/#wpcf7-f841-p157-o1"
-														method="post" class="wpcf7-form init" novalidate="novalidate"
-														data-status="init">
+													<form action="#" method="post" class="wpcf7-form init" novalidate="novalidate" data-status="init">
+														{% csrf_token %}
 														<div style="display: none;">
 															<input type="hidden" name="_wpcf7" value="841" />
 															<input type="hidden" name="_wpcf7_version" value="5.6.3" />
