--- a/estate_project/templates/footer.html
+++ b/estate_project/templates/footer.html
@@ -84,19 +84,19 @@
                         <div class="menu-useful-links-container">
                             <ul id="menu-useful-links" class="menu">
                                 <li id="menu-item-1040" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1040">
-                                    <a href="/about-us" style="color: white; ">About Us</a>
+                                    <a href="/about-us">About Us</a>
                                 </li>
                                 <li id="menu-item-1041" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1041">
-                                    <a href="#" style="color: white; ">Blog</a>
+                                    <a href="#">Blog</a>
                                 </li>
                                 <li id="menu-item-1042" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1042">
-                                    <a href="/our-projects" style="color: white; ">Projects</a>
+                                    <a href="/our-projects">Projects</a>
                                 </li>
                                 <li id="menu-item-1043" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1043">
-                                    <a href="/contact-us" style="color: white; ">Support Center</a>
+                                    <a href="/contact-us">Support Center</a>
                                 </li>
                                 <li id="menu-item-1044" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1044">
-                                    <a href="/contact-us" style="color: white; ">Become an Zaran Agent</a>
+                                    <a href="/contact-us">Become an Zaran Agent</a>
                                 </li>
                             </ul>
                         </div>
