removed methods for forms

--- a/estate_project/templates/schedule-inspection.html
+++ b/estate_project/templates/schedule-inspection.html
@@ -51,7 +51,7 @@
 													<div class='fluentform fluentform_wrapper_1' style="display: flex; justify-content: center;">
 														
 
-														<form data-form_id="1" id="fluentform_1" class="frm-fluent-form fluent_form_1 ff-el-form-top ff_form_instance_1_1 ff-form-loading" data-form_instance="ff_form_instance_1_1" method="POST" style="display: inline-block; background-color: #ffffff; border-radius: 10px; box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15); padding: 20px;">
+														<form data-form_id="1" id="fluentform_1" class="frm-fluent-form fluent_form_1 ff-el-form-top ff_form_instance_1_1 ff-form-loading" data-form_instance="ff_form_instance_1_1"  style="display: inline-block; background-color: #ffffff; border-radius: 10px; box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15); padding: 20px;">
 															<input type='hidden' name='__fluent_form_embded_post_id' value='596' />
 															<input type="hidden" id="_fluentform_1_fluentformnonce" name="_fluentform_1_fluentformnonce" value="902f23a7db" />
 															<input type="hidden" name="_wp_http_referer" value="/schedule-inspection/" />
