--- a/estate_project/templates/contact-us.html
+++ b/estate_project/templates/contact-us.html
@@ -50,7 +50,7 @@
 														<p role="status" aria-live="polite" aria-atomic="true"></p>
 														<ul></ul>
 													</div>
-													<form action="#" method="post" class="wpcf7-form init" novalidate="novalidate" data-status="init">
+													<form action="#"  class="wpcf7-form init" novalidate="novalidate" data-status="init">
 														{% csrf_token %}
 														<div style="display: none;">
 															<input type="hidden" name="_wpcf7" value="841" />
