changed the stroke direction for path

--- a/estate_project/templates/index.html
+++ b/estate_project/templates/index.html
@@ -200,13 +200,13 @@
 													<rs-slides>
 														<rs-slide style="position: absolute" data-key="rs-8"
 															data-title="Slide"
-															data-thumb="{% static 'wp-content\plugins\revslider\public\assets\assets\real-estate-2.jpg' %}"
+															data-thumb="{% static 'wp-content/plugins/revslider/public/assets/assets/real-estate-2.jpg' %}"
 															data-duration="7000ms" data-anim="adpr:false;"
 															data-in="o:0;" data-out="a:false;">
 															<img src="{% static 'wp-content/plugins/revslider/public/assets/assets/real-estate-2.png' %}"
 																alt="" title="2Bed Terrace 3D." width="2560"
 																height="1440" class="rev-slidebg tp-rs-img rs-lazyload"
-																data-lazyload="{% static 'wp-content\plugins\revslider\public\assets\assets\real-estate-2.jpg' %}"
+																data-lazyload="{% static 'wp-content/plugins/revslider/public/assets/assets/real-estate-2.jpg' %}"
 																data-no-retina />
 															<!--
 							--><rs-layer id="slider-3-slide-8-layer-0" data-type="shape" data-rsp_ch="on"
@@ -271,13 +271,13 @@
 														</rs-slide>
 														<rs-slide style="position: absolute" data-key="rs-13"
 															data-title="Slide"
-															data-thumb="{% static 'wp-content\plugins\revslider\public\assets\assets\real-estate-3.jpg' %}"
+															data-thumb="{% static 'wp-content/plugins/revslider/public/assets/assets/real-estate-3.jpg' %}"
 															data-duration="7000ms" data-anim="adpr:false;"
 															data-in="o:0;" data-out="a:false;">
-															<img src="{% static 'wp-content\plugins\revslider\public\assets\assets\real-estate-3.jpg' %}"
+															<img src="{% static 'wp-content/plugins/revslider/public/assets/assets/real-estate-3.jpg' %}"
 																alt="" title="3Bed Terrace_3bed 3d 3." width="2560"
 																height="1440" class="rev-slidebg tp-rs-img rs-lazyload"
-																data-lazyload="{% static 'wp-content\plugins\revslider\public\assets\assets\real-estate-3.jpg' %}"
+																data-lazyload="{% static 'wp-content/plugins/revslider/public/assets/assets/real-estate-3.jpg' %}"
 																data-no-retina />
 															<!--
 							--><rs-layer id="slider-3-slide-13-layer-0" data-type="shape" data-rsp_ch="on"
@@ -345,13 +345,13 @@
 								</rs-slide>
 														<rs-slide style="position: absolute" data-key="rs-14"
 															data-title="Slide"
-															data-thumb="{% static 'wp-content\plugins\revslider\public\assets\assets\real-estate-1.jpg' %}"
+															data-thumb="{% static 'wp-content/plugins/revslider/public/assets/assets/real-estate-1.jpg' %}"
 															data-duration="7000ms" data-anim="adpr:false;"
 															data-in="o:0;" data-out="a:false;">
-															<img src="{% static 'wp-content\plugins\revslider\public\assets\assets\real-estate-1.jpg' %}"
+															<img src="{% static 'wp-content/plugins/revslider/public/assets/assets/real-estate-1.jpg' %}"
 																alt="" title="2Bed Terrace 3D,_2bed 3d 4." width="2560"
 																height="1440" class="rev-slidebg tp-rs-img rs-lazyload"
-																data-lazyload="{% static 'wp-content\plugins\revslider\public\assets\assets\real-estate-1.jpg' %}"
+																data-lazyload="{% static 'wp-content/plugins/revslider/public/assets/assets/real-estate-1.jpg' %}"
 																data-no-retina />
 															<!--
 							--><rs-layer id="slider-3-slide-14-layer-0" data-type="shape" data-rsp_ch="on"
