--- a/estate_project/templates/index.html
+++ b/estate_project/templates/index.html
@@ -200,13 +200,13 @@
 													<rs-slides>
 														<rs-slide style="position: absolute" data-key="rs-8"
 															data-title="Slide"
-															data-thumb="{% static 'wp-content/uploads/zeranimg/projects/landscape01jpg' %}"
+															data-thumb="{% static 'wp-content/uploads/zeranimg/projects/slider1.jpg' %}"
 															data-duration="7000ms" data-anim="adpr:false;"
 															data-in="o:0;" data-out="a:false;">
-															<img src="{% static 'wp-content/uploads/zeranimg/projects/landscape01.jpg' %}"
+															<img src="{% static 'wp-content/uploads/zeranimg/projects/slider1.jpg' %}"
 																alt="" title="2Bed Terrace 3D." width="2560"
 																height="1440" class="rev-slidebg tp-rs-img rs-lazyload"
-																data-lazyload="{% static 'wp-content/uploads/zeranimg/projects/landscape01.jpg' %}"
+																data-lazyload="{% static 'wp-content/uploads/zeranimg/projects/slider1.jpg' %}"
 																data-no-retina />
 															<!--
 							--><rs-layer id="slider-3-slide-8-layer-0" data-type="shape" data-rsp_ch="on"
